--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ overflow-x: hidden;
   </div>
 
   <script src="lib/d3.min.js" charset="utf-8"></script>
-  <script src="build/yearly_payments_chart.js"></script>
-  <script src="build/calculator_components.js"></script>
-  <script src="build/calculator_app.js"></script>
+  <script src="yearly_payments_chart.js"></script>
+  <script src="calculator_components.js"></script>
+  <script src="calculator_app.js"></script>
 
 </body>
 </html>
