--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <link rel="icon" href="logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="react.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-2092383264864491",
+          enable_page_level_ads: true
+     });
+</script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css" media="screen" title="main styles" charset="utf-8">
 <!-- Global site tag (gtag.js) - Google Analytics -->
