--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@ overflow-x: hidden;
   <script src="yearly_payments_chart.js"></script>
   <script src="calculator_components.js"></script>
   <script src="calculator_app.js"></script>
+  
+  <br>
+<br>
+  
+  <footer><center>
+  <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</center></footer>
 
 </body>
 </html>
