--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ overflow-x: hidden;
 </style>
 </head>
 <body>
+  <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" nonce="taAsvTF1"></script>
   <div class="container">
 
     <div class="page-header">
@@ -54,7 +56,11 @@ overflow-x: hidden;
   
   <footer><center>
   <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-</center></footer>
+    <div style="position: relative; bottom: 4px" class="fb-share-button" 
+data-href="https://mortgageghost.github.io"
+data-layout="button">
+</div>
+    </center></footer>
 
 </body>
 </html>
